--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -18,7 +18,7 @@
     <%=landmark.name%><input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=landmark.id%>" value="<%=landmark.id%>"><br>
   <%end%>
   <h3>Create New Landmark:</h3>
-  <label for="landmark_name">Name: </label><input type="text" name="landmark[name]" id="new_landmark">
+  <label for="new_landmark">Name: </label><input type="text" name="landmark[name]" id="new_landmark">
   <label for="landmark_year">Year: </label><input type="text" name="landmark[year_completed]" id="landmark_year">
   <input type="submit" value="Edit Figure">
 </form>
