Automatically backed up by Learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -2,7 +2,7 @@
 
 <!-- add content here -->
 <form action="/landmarks" method="post">
-
+  <label for="landmark_name">Landmark Name: </label>
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
