--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -3,6 +3,7 @@
 <!-- add content here -->
 <form action="/landmarks" method="post">
   <label for="landmark_name">Landmark Name: </label>
+  <input type="text" id="landmark_name" name="landmark[name]" value="landmark_name">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
