--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -4,6 +4,8 @@
 <form action="/landmarks" method="post">
   <label for="landmark_name">Landmark Name: </label>
   <input type="text" id="landmark_name" name="landmark[name]" value="landmark_name">
+
+  <input type="submit" value="Create">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
