--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -3,7 +3,10 @@
 <!-- add content here -->
 <form action="/landmarks" method="post">
   <label for="landmark_name">Landmark Name: </label>
-  <input type="text" id="landmark_name" name="landmark[name]" value="landmark_name">
+  <input type="text" id="landmark_name" name="landmark[name]">
+  <br>
+  <label for="landmark_year">Year Completed:</label>
+  <input type="text" id="landmark_year" name="landmark[year_completed]">
 
   <input type="submit" value="Create">
 </form>
