--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -5,8 +5,8 @@
   <label for="landmark_name">Landmark Name: </label>
   <input type="text" id="landmark_name" name="landmark[name]">
   <br>
-  <label for="landmark_year">Year Completed:</label>
-  <input type="text" id="landmark_year" name="landmark[year_completed]">
+  <label for="landmark_year_completed">Year Completed:</label>
+  <input type="text" id="landmark_year_completed" name="landmark[year_completed]">
 
   <input type="submit" value="Create">
 </form>
