--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -8,7 +8,7 @@
   <label for="landmark_year_completed">Year Completed:</label>
   <input type="text" id="landmark_year_completed" name="landmark[year_completed]">
 
-  <input type="submit" value="Create">
+  <input type="submit" value="Create New Landmark">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
