--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -4,7 +4,7 @@
 <ul>
 
 <%@landmarks.each do |landmark|%>
-  <li><%=landmark.name%></li>
+  <li><%=landmark.name%> <%=landmark.year_completed%></li>
 <%end%>
 </ul>
 
