--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,9 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<label for="landmark_name">Lankmark Name: </label>
+<input type="text" name="landmark[name]" value="<%=@landmark.name%>">
+
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
