--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,8 +1,13 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
-<label for="landmark_name">Lankmark Name: </label>
-<input type="text" name="landmark[name]" value="<%=@landmark.name%>">
+<form class="" action="index.html" method="post">
+  <label for="landmark_name">Lankmark Name: </label>
+  <input type="text" id="landmark_name" name="landmark[name]" value="<%=@landmark.name%>">
+
+  <label for="landmark_year_completed">Year Completed: </label>
+  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
+</form>
 
 
 <a class="button" href="/landmarks">Landmarks</a>
