--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,8 +7,9 @@
 
   <label for="landmark_year_completed">Year Completed: </label>
   <input type="text" id="landmark_year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
-</form>
 
+  <input type="submit" value="Update">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
