--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -2,8 +2,8 @@
 
 <!-- add content here -->
 <form class="" action="index.html" method="post">
-  <label for="landmark_name">Lankmark Name: </label>
-  <input type="text" id="landmark_name" name="landmark[name]" value="<%=@landmark.name%>">
+  <label for="name">Lankmark Name: </label>
+  <input type="text" id="name" name="landmark[name]" value="<%=@landmark.name%>">
 
   <label for="landmark_year_completed">Year Completed: </label>
   <input type="text" id="landmark_year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
