--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -5,8 +5,8 @@
   <label for="name">Lankmark Name: </label>
   <input type="text" id="name" name="landmark[name]" value="<%=@landmark.name%>">
 
-  <label for="landmark_year_completed">Year Completed: </label>
-  <input type="text" id="landmark_year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
+  <label for="year_completed">Year Completed: </label>
+  <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
 
   <input type="submit" value="Update">
 </form>
