--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -8,7 +8,7 @@
   <label for="year_completed">Year Completed: </label>
   <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
 
-  <input type="submit" value="Update">
+  <input type="submit" value="Edit Landmark">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
