Automatically backed up by Learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -2,6 +2,7 @@
 
 <!-- add content here -->
 <form class="" action="index.html" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
   <label for="name">Lankmark Name: </label>
   <input type="text" id="name" name="landmark[name]" value="<%=@landmark.name%>">
 
