--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,16 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form class="" action="/landmarks/<%=@landmark.id%>" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
+  <label for="name">Lankmark Name: </label>
+  <input type="text" id="name" name="landmark[name]" value="<%=@landmark.name%>">
+
+  <label for="year_completed">Year Completed: </label>
+  <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
+
+  <input type="submit" value="Edit Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
